# AD_raPIDas

./: .gitignore  README.md  optuna_study.db  optuna_study_bayes_search_aim.db  optuna_study_bayes_search_model.db  optuna_study_bayes_search_ppo.db  optuna_study_random_search_ppo.db  pyproject.toml  requirements.txt
.github/workflows/: python_tests.yml
db/: optuna_study_bayes_search_aim.db  optuna_study_bayes_search_model.db  optuna_study_random_search_model.db
docs/: 21_04_2026.md  26_05_2026.md  5_05_2026.md  BOM.md  RL_algorithms.md  backlog.md  system_atchitecture.drawio
docs/diff_noise/: tab.md
env/: BLDC_motor.py  BLDCmotor.py  CONSTS.py  PID_controller.py  bldc_gym_env.py  bldc_test.py
models/: bldc_pid_tuner_with_dynamic_SP_PARAMS_LOAD.3zip
opt/: random_opt.json
ppo_bldc_logs/bldc_pid_tuner_2026-03-21_23-39_1/: events.out.tfevents.1774132784.victus.201055.0
ppo_bldc_logs/bldc_pid_tuner_KS1_1/: events.out.tfevents.1774894305.witek.32603.0
ppo_bldc_logs/bldc_pid_tuner_KS1_2/: events.out.tfevents.1774897802.witek.36513.0
ppo_bldc_logs/bldc_pid_tuner_KS1_3/: events.out.tfevents.1774898603.witek.37413.0
ppo_bldc_logs/bldc_pid_tuner_KS1_4/: events.out.tfevents.1774900572.witek.41088.0
ppo_bldc_logs/bldc_pid_tuner_KS2_1/: events.out.tfevents.1774901824.witek.42987.0
src/: PIDController.py  PID_controller.py  bldc_test.py  control_evaluation.py  db_rename.py  delete_dyn_models.py  gym_env_test.py  opt_train.py  test_PID.py  test_rl.py  train_all.py  train_rl.py  trainings.py
test/: PID_test.py  bldc_test.py  gym_env_test.py
(+1083 files in other folders)
