[project]
name = "ad-rapidas"
version = "0.1.0"
description = ""
authors = [
    {name = "dawid.robak",email = "dawid.robak1704@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "control (>=0.10.2,<0.11.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "stable-baselines3 (>=2.7.1,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "setuptools (<70.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false  # <--- DODAJ TĘ LINIĘ to chat wypluł
